[gd_scene load_steps=25 format=3 uid="uid://wqdgq1a7r2ml"]

[ext_resource type="Script" uid="uid://b166xvbc6nf64" path="res://World/world.gd" id="1_fuqf5"]
[ext_resource type="Script" uid="uid://lyj3fi66muug" path="res://World/day_night_cycle.gd" id="1_yp3no"]
[ext_resource type="PackedScene" uid="uid://dw2fqgynxjcit" path="res://Characters/Player/PlayerCharacterController/player_character_controller.tscn" id="1_yr2t8"]
[ext_resource type="PackedScene" uid="uid://dxd0kh8rswpem" path="res://Components/PowerLineDrawer/power_line_drawer.tscn" id="2_gho6m"]
[ext_resource type="Script" uid="uid://rvwny5vq4uhf" path="res://Resources/item_grid_item.gd" id="2_xyax1"]
[ext_resource type="Script" uid="uid://cdp7s6pjgskwb" path="res://Resources/item_grid.gd" id="2_y51w7"]
[ext_resource type="Script" uid="uid://bg5ne6c0ge6gv" path="res://Resources/inventory.gd" id="2_ymyob"]
[ext_resource type="PackedScene" uid="uid://ub0qa7k8xrx7" path="res://Components/MapEntityCollection/map_entity_collection.tscn" id="5_0ixtc"]
[ext_resource type="Script" uid="uid://c1xjesyxds6hv" path="res://World/sector_handler.gd" id="5_ph0as"]
[ext_resource type="Script" uid="uid://o1776oesu3i2" path="res://World/tiles.gd" id="6_7fj4g"]
[ext_resource type="PackedScene" uid="uid://c33tblr4cbh8p" path="res://Objects/Ledge/ledge.tscn" id="7_p745u"]
[ext_resource type="Script" uid="uid://cslvebpokvfhg" path="res://Characters/Player/PlayerCharacterController/handle_placing_object.gd" id="9_0lysu"]
[ext_resource type="Texture2D" uid="uid://hoqmxhp5bhdr" path="res://Assets/0x72_16x16RobotTileset.v1.png" id="9_dna0g"]
[ext_resource type="PackedScene" uid="uid://c4ikfoien6boi" path="res://Components/Target/target.tscn" id="10_7fjhp"]
[ext_resource type="PackedScene" uid="uid://daw30mg70crel" path="res://Objects/OneWayPlatform/one_way_platform.tscn" id="10_kift4"]
[ext_resource type="Script" uid="uid://c1ol66hrqye82" path="res://Resources/MapData/map_texture.gd" id="10_tgpag"]
[ext_resource type="Script" uid="uid://c1obh20vcwrr0" path="res://World/player_target.gd" id="11_bifaf"]
[ext_resource type="Script" uid="uid://dcfcop8t56k47" path="res://Components/EnviornmentQuerySystem/enviornment_query_system.gd" id="13_0dgh0"]
[ext_resource type="Script" uid="uid://dhymsf2sckhai" path="res://World/damaged_units_tracker.gd" id="18_uwj3v"]
[ext_resource type="Script" uid="uid://bdx0j5t53eiw" path="res://World/baked_ledges.gd" id="19_xw5lg"]

[sub_resource type="Resource" id="Resource_hghbi"]
script = ExtResource("2_y51w7")
size = Vector2i(6, 4)
initial_items = Array[ExtResource("2_xyax1")]([])

[sub_resource type="Resource" id="Resource_ecwqp"]
script = ExtResource("2_ymyob")
item_grid = SubResource("Resource_hghbi")

[sub_resource type="AtlasTexture" id="AtlasTexture_evjoi"]
atlas = ExtResource("9_dna0g")
region = Rect2(208, 54, 16, 26)

[sub_resource type="Resource" id="Resource_xtc4p"]
resource_local_to_scene = true
script = ExtResource("10_tgpag")
display_texture = SubResource("AtlasTexture_evjoi")
z_index = 1
scale = Vector2(2, 2)

[node name="Level" type="Node2D" node_paths=PackedStringArray("active_player")]
script = ExtResource("1_fuqf5")
active_player = NodePath("PlayerCharacterController")
shelter_inventory = SubResource("Resource_ecwqp")

[node name="DamagedShipPartsTracker" type="Node" parent="."]
script = ExtResource("18_uwj3v")

[node name="SectorHandler" type="Node" parent="."]
script = ExtResource("5_ph0as")

[node name="LevelMapMapEntityCollection" parent="." instance=ExtResource("5_0ixtc")]

[node name="PowerPoleSelectionMapEntityCollection" parent="." instance=ExtResource("5_0ixtc")]

[node name="DayNightCycle" type="Node" parent="."]
script = ExtResource("1_yp3no")

[node name="DayTimer" type="Timer" parent="DayNightCycle"]
wait_time = 120.0
one_shot = true

[node name="PlayerPlaceObjectHandler" type="Node2D" parent="." node_paths=PackedStringArray("world", "environment_query_system")]
script = ExtResource("9_0lysu")
world = NodePath("..")
environment_query_system = NodePath("../EnvironmentQuerySystem")

[node name="PowerLineDrawer" parent="." instance=ExtResource("2_gho6m")]

[node name="EnvironmentQuerySystem" type="Node" parent="." node_paths=PackedStringArray("initial_tile_map_layers")]
script = ExtResource("13_0dgh0")
initial_tile_map_layers = [NodePath("../Tiles")]

[node name="PlayerCharacterController" parent="." node_paths=PackedStringArray("node_to_spawn_placeables_in", "environment_query_system", "level_map_map_entity_collection") instance=ExtResource("1_yr2t8")]
map_texture = SubResource("Resource_xtc4p")
node_to_spawn_placeables_in = NodePath("..")
environment_query_system = NodePath("../EnvironmentQuerySystem")
level_map_map_entity_collection = NodePath("../LevelMapMapEntityCollection")

[node name="Tiles" type="TileMapLayer" parent="." node_paths=PackedStringArray("environment_query_system")]
script = ExtResource("6_7fj4g")
one_way_platform_packed_scene = ExtResource("10_kift4")
environment_query_system = NodePath("../EnvironmentQuerySystem")

[node name="LedgeBaker" type="Node2D" parent="Tiles"]
script = ExtResource("19_xw5lg")
ledge_packed_scene = ExtResource("7_p745u")

[node name="PlayerTarget" parent="." node_paths=PackedStringArray("player_character_controller") instance=ExtResource("10_7fjhp")]
script = ExtResource("11_bifaf")
player_character_controller = NodePath("../PlayerCharacterController")

[connection signal="all_damaged_ship_parts_repaired" from="DamagedShipPartsTracker" to="." method="_on_damaged_ship_parts_tracker_all_damaged_ship_parts_repaired"]
[connection signal="day_ended" from="DayNightCycle" to="PlayerCharacterController" method="_on_day_night_cycle_day_ended"]
[connection signal="day_started" from="DayNightCycle" to="PlayerCharacterController" method="_on_day_night_cycle_day_started"]
[connection signal="timeout" from="DayNightCycle/DayTimer" to="DayNightCycle" method="_on_day_timer_timeout"]
[connection signal="cancelled_placing" from="PlayerPlaceObjectHandler" to="PlayerCharacterController" method="_on_player_place_object_handler_cancelled_placing"]
[connection signal="placeable_placed" from="PlayerPlaceObjectHandler" to="PlayerCharacterController" method="_on_player_place_object_handler_placeable_placed"]
[connection signal="cancel_placing_placeable_pressed" from="PlayerCharacterController" to="PlayerPlaceObjectHandler" method="_on_player_character_controller_cancel_placing_placeable_pressed"]
[connection signal="day_ended" from="PlayerCharacterController" to="DayNightCycle" method="start_new_day"]
[connection signal="place_placeable_pressed" from="PlayerCharacterController" to="PlayerPlaceObjectHandler" method="_on_player_character_controller_place_placeable_pressed"]
[connection signal="changed" from="Tiles" to="Tiles" method="_on_changed"]
